# pharmalog

./: .gitignore  CHANGELOG.md  README.md  pharmalog.cabal
app/: Main.hs
haskell/: CHANGELOG.md  stack.yaml
haskell/app/: Main.hs
haskell/src/Controllers/: MenuController.hs
haskell/src/Models/: Client.hs  Sale.hs  User.hs
haskell/src/Services/: ChatService.hs  RelatorioProduct.hs  RelatorioSale.hs  SaleService.hs  SellerService.hs  UserService.hs
plp/: stack.yaml
plp/.stack-work/: stack.sqlite3
plp/.stack-work/ghci/a26aa6c8/: cabal_macros.h
plp/.stack-work/install/282efe3f/doc/pharmalog-0.1.0.0/: LICENSE
prolog/app/: pharmalog.pl  productDB.pl
prolog/data/: chatDB.pl  customerDB.pl  productDB.pl  userDB.pl
prolog/src/assets/: chat_layout.pl  client_layout.pl  menu_layout.pl  product_layout.pl  report_layout.pl  sales_layout.pl  user_layout.pl
prolog/src/controllers/: menu_controller.pl
prolog/src/models/: Client.pl  Messagge.pl  Product.pl  Sale.pl  message.pl  product.pl  user.pl
prolog/src/services/: ChatService.pl  ClientService.pl  ProductService.pl  RelatorioProduct.pl  SaleService.pl  SellerService.pl  chat_service.pl  product_service.pl  relatorioService.pl  user_service.pl
src/Controllers/: MenuController.hs
src/Models/: Client.hs  Manager.hs  Message.hs  Product.hs  Sale.hs  Seller.hs  User.hs
src/Services/: ChatService.hs  ClientService.hs  ManagerService.hs  ProductService.hs  RelatorioProduct.hs  SaleService.hs  SellerService.hs  UserService.hs
