cabal-version:       2.2

name:                pharmalog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pharmalog#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable pharmalog
  hs-source-dirs:      app, src
  main-is:             Main.hs
  other-modules:       Controllers.MenuController, Services.UserService, Services.ChatService, Models.Message, Models.User
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time >= 1.12 && < 1.13,
                       directory
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
